# tensor-adapt

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
docs/: lora_training.md
include/tensor/adapter/: adapter_config.hpp  adapter_model.hpp
include/tensor/backend/cuda/: device.hpp  ops.hpp  tensor.hpp
include/tensor/base/: base_loader.hpp  frozen_base.hpp
include/tensor/base/arch/: qwen2.hpp
include/tensor/centroid/: centroid_accumulator.hpp  centroid_merge.hpp
include/tensor/checkpoint/: adapter_writer.hpp
include/tensor/data/: dataset.hpp
include/tensor/resolve/: resolver.hpp
include/tensor/tokenizer/: bpe_tokenizer.hpp
include/tensor/trainer/: adamw.hpp  adapt_trainer.hpp  cosine_schedule.hpp
src/adapter/: adapter_config.cpp  adapter_model.cu
src/backend/cuda/: device.cu  ops.cu  tensor.cu
src/base/: base_loader.cpp
src/base/arch/: qwen2.cu
src/centroid/: centroid_accumulator.cpp  centroid_merge.cpp
src/checkpoint/: adapter_writer.cpp
src/data/: dataset.cpp
src/parser/detail/: mmap.hpp
src/resolve/: resolver.cpp
src/tokenizer/: bpe_tokenizer.cpp
src/trainer/: adamw.cu  adapt_trainer.cu
tools/: centroid-merge.cpp  dataset-format.cpp  hf-fetch.cpp  hf.cpp  tensor-adapt.cpp
